acid/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-training
spec:
  type: NodePort
  selector:
    app: devops-training
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30081
